--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -183,7 +183,7 @@ services:
     image: locustio/locust
     volumes:
       - ./locustfile.py:/locustfile.py
-    command: locust -f /locustfile.py --host=http://soc-emulator:8000
+    command: -f /locustfile.py --host=http://soc-emulator:8000
     ports:
       - "8089:8089"
     depends_on:
