--- a/spark-app/Dockerfile
+++ b/spark-app/Dockerfile
@@ -1,13 +1,11 @@
 # Stage 1: Build dependencies and application code
-FROM ubuntu:20.04 AS builder
+FROM python:3.9-slim AS builder
 
 # Set working directory
 WORKDIR /app
 
 # Install necessary tools and dependencies
-RUN apt-get update -o Dpkg::Progress-Fancy="1" > /dev/null && \
-    apt-get install -y python3-pip wget -o Dpkg::Progress-Fancy="1" > /dev/null && \
-    rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
 
 # Copy application code and scripts
 COPY data_analysis.py test_cpu_usage.py requirements.txt entrypoint.sh /app/
@@ -16,10 +14,10 @@ COPY data_analysis.py test_cpu_usage.py requirements.txt entrypoint.sh /app/
 RUN chmod +x /app/entrypoint.sh
 
 # Install Python dependencies
-RUN pip3 install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Download PostgreSQL JDBC driver
-RUN wget https://jdbc.postgresql.org/download/postgresql-42.2.23.jar -P /opt/spark/jars/
+RUN wget https://jdbc.postgresql.org/download/postgresql-42.2.23.jar -P /app/jars/
 
 # Stage 2: Create the final image
 FROM bitnami/spark:latest
@@ -35,7 +33,7 @@ ENV HOME=/home/sparkuser
 
 # Copy dependencies and application code from the builder stage
 COPY --from=builder /app /app
-COPY --from=builder /opt/spark/jars/postgresql-42.2.23.jar /opt/bitnami/spark/jars/
+COPY --from=builder /app/jars/postgresql-42.2.23.jar /opt/bitnami/spark/jars/
 
 # Set working directory
 WORKDIR /app
@@ -51,3 +49,4 @@ USER sparkuser
 
 # Set the entrypoint
 ENTRYPOINT ["/app/entrypoint.sh"]
+
