--- a/.env
+++ b/.env
@@ -1,5 +1,30 @@
+# Database Configuration
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
 POSTGRES_DB=soc_data
+POSTGRES_PORT=5432
+
+# Grafana Configuration
 GRAFANA_ADMIN_PASSWORD=admin
+GRAFANA_PORT=3001
+
+# API Backend Configuration
 API_BACKEND_URL=http://api-backend:5000
+API_BACKEND_PORT=5000
+
+# Prometheus Configuration
+PROMETHEUS_PORT=9090
+
+# Locust Configuration
+LOCUST_PORT=8089
+
+# Soc-Emulator Configuration
+SOC_EMULATOR_PORT=9100
+
+# Spark Configuration
+SPARK_MASTER_WEBUI_PORT=8080
+SPARK_WORKER_WEBUI_PORT=8081
+
+# PrestoSQL Configuration
+PRESTO_PORT=8082
+
