--- a/api-backend/Dockerfile
+++ b/api-backend/Dockerfile
@@ -1,16 +1,18 @@
-# 
-# Dockerfile for API Backend
-# 
-
 # Base image
 FROM python:3.9-slim
+
+# Install necessary system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
 WORKDIR /app
 
 # Copy requirements and install
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY app.py .
