--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,7 +1,3 @@
-# 
-# Prometheus Configuration
-# 
-
 global:
   scrape_interval: 15s
 
@@ -11,4 +7,4 @@ scrape_configs:
       - targets: ['soc-emulator:9100']
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
